[package]
name = "gpustat"
version = "0.1.6"
authors = ["ylfeng <ylfeng@ir.hit.edu.cn>"]
edition = "2018"
license = "GPL-2.0"
description = "A rust-version of gpustat."
homepage = "https://github.com/AlongWY/gpustat"
repository = "https://github.com/AlongWY/gpustat"
keywords = ["shell", "gpustat"]

[profile.release]
lto = true
opt-level = 3
panic = 'abort'
codegen-units = 1


[dependencies]
nix = "0.26"
clap = { version = "4", default-features = false, features = ["std", "derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
sysinfo = { version = "0.28", default-features = false }
hostname = "^0.3"
thiserror = "1.0"
comfy-table = "6"
nvml-wrapper = { version = "0.9", default-features = false }

[features]
legacy-functions = ["nvml-wrapper/legacy-functions"]